# TechnologiesLabaThird

./: .gitignore  CMakeLists.txt  README.md  array_operations.h  build.bat  build.sh  io.cpp  io.h  main.cpp  onefile.cpp
func/: Makefile
func/include/: array_operations.hpp
func/src/: array_operations.cpp  main.cpp
onefile/: funcOneFile.cpp  oopOneFile.cpp
oop/: Makefile
oop/include/: ArrayApp.hpp  ArrayOperations.hpp
oop/src/: ArrayApp.cpp  ArrayOperations.cpp  main.cpp
